feat: 新增登录校验接口

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=spring
+server.port=8080
 
 spring.ai.openai.base-url=https://api.xty.app
 spring.ai.openai.api-key=sk-AoloRm0QEf0fmVn294241dA75f2b47Bf8b02693f21859754
@@ -7,3 +8,8 @@ spring.ai.openai.chat.options.temperature=0.7
 
 #spring.ai.ollama.base-url=http://localhost:11434
 #spring.ai.ollama.chat.model=llama3.2
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://rm-wz91a4kg5l0ygipdwfo.mysql.rds.aliyuncs.com:3306/aidatabase
+spring.datasource.username=LiXin
+spring.datasource.password=LiXin666
