--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://rm-wz91a4kg5l0ygipdwfo.mysql.rds.aliyuncs.com:3306/aidatabase
 spring.datasource.username=LiXin
 spring.datasource.password=LiXin666
+
+#server.servlet.session.timeout=5m
+#
+#spring.session.redis.namespace=spring:session:aiDatabase
+#spring.data.redis.host=47.121.136.84
+#spring.data.redis.port=6379
+#spring.data.redis.password=redis_FRTWdK
